[package]
name = "ssl-ifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures stuff
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
# server
axum = { version = "0.6.19", features = ["ws"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["add-extension"] }
# tls
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
# websockets
tungstenite = "0.20.0"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
axum-tungstenite = "0.3.0"
# misc
anyhow = "1.0.72"
serde = { version = "1.0.181", features = ["derive"] }
toml = "0.7.6"
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
    "stream",
    "brotli",
    "gzip",
], default-features = false }
const_format = { version = "0.2.31", features = ["rust_1_51"] }
url = "2.4.0"
