[package]
name = "ssl-ifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# futures stuff
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
# server
axum = { version = "0.7.5", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5.2", features = ["add-extension"] }
# tls
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
# websockets
tungstenite = "0.23.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
# misc
color-eyre = "0.6.3"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_more = { version = "1.0.0", features = ["display"] }
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
owo-colors = "4.0.0"
# todo: 0.12.5 wrap_stream requires Sync, but it's removed on master
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "b9d62a0", features = [
    "rustls-tls",
    "stream",
    "brotli",
    "gzip",
], default-features = false }
const_format = { version = "0.2.32", features = ["rust_1_51"] }
url = "2.5.2"

[profile.release-with-debug]
inherits = "release"
debug = true
