[package]
name = "ssl-ifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# futures stuff
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
# server
axum = { version = "0.7.7", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["add-extension"] }
# tls
rustls = "0.23.14"
rustls-pemfile = "2.2.0"
# websockets
tungstenite = "0.24.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
# misc
color-eyre = "0.6.3"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_more = { version = "1.0.0", features = ["display"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
owo-colors = "4.1.0"
reqwest = { version = "0.12.8", features = [
    "stream",
    "deflate",
    "brotli",
    "gzip",
    "zstd",
] }
const_format = { version = "0.2.33", features = ["rust_1_51"] }
url = "2.5.2"

[profile.release-with-debug]
inherits = "release"
debug = true
